/*
The file is generated by a scaffold script
@author: Arkan M. Gerges<arkan.m.gerges@gmail.com>
*/


syntax = "proto3";
package cafm.project.project;

message Project {
  string id = 1;
  string name = 2;
  int32 cityId = 3;
  int32 countryId = 4;
  int32 startDate = 5;
  string beneficiaryId = 6;
  string addressLine = 7;
  string state = 8;
  string addressLineTwo = 9;
}
